working on an issue with select element on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -100,7 +100,7 @@ select {
     
     border-radius: 5px;
     background-color: #0074D9 !important;
-    border: 4px solid #DDDDDD;
+    border: 4px solid;
     margin: 5px;
     font-size: 25px;
     color: #DDDDDD;
